# reflex-audio

./: .gitignore  NOTES.md  README.md  appveyor.yml  bench.sh  build.sh  cabal.project  configure.sh  default.nix  document.sh  environment.sh  interpreter.sh  provision.sh  reconfigure.sh  reflex-audio.cabal  run.sh  shell.nix  stack-nix.yaml  stack.yaml  test.sh  verify.sh  watch.sh
benchmarks/: Bench.hs
executables/: Main.hs
nix/: reflex-audio.nix  shell.nix
sources/Reflex/: Audio.hs
sources/Reflex/Audio/: Core.hs  Example.hs  Extra.hs  Types.hs
tests/: DocTests.hs  PropertyTests.hs  UnitTests.hs
tests/Reflex/Audio/: Property.hs  Test.hs
